Fixed z-index bug

--- a/static/css/primate.css
+++ b/static/css/primate.css
@@ -1230,3 +1230,7 @@ p.validation {
 .error-state .select2-choice {
     border-color: #e51400;
 }
+
+.metro .input-control.text .btn-file {
+    z-index: 0;
+}
